--- a/index.html
+++ b/index.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width" >
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<header>
 
+</header>
+
+<section class="group">
+
+    <div class="info-text">
+        Cool Text here
+    </div>
+
+    <div class="login">
+        <form>
+            <input type="text" placeholder="Email/ CollegeID"> <br />
+            <input type="password" placeholder="Password"> <br />
+            <input type="submit" value="Login"><br />
+            <label><input type="checkbox">Remember me</label>
+            <a class="right" href="#">Forgot Password?</a>
+        </form>
+    </div>
+
+</section>
+
+<footer>
+<ul>
+    <li>Term & services</li>
+    <li> so more text</li>
+</ul>
+
+</footer>
 </body>
 </html>
