--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" >
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -15,7 +16,8 @@
 <section class="group">
 
     <div class="info-text">
-        Cool Text here
+        Cool Text here<br />
+        <span>Small Description here</span>
     </div>
 
     <div class="login">
