--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="password" placeholder="Password"> <br/>
             <input type="submit" value="Login"><br/>
             <label><input type="checkbox">Remember me</label>
-            <a class="right" href="#">Forgot Password?</a>
+            <a class="right group" href="#">Forgot Password?</a>
         </form>
     </div>
 
@@ -34,8 +34,10 @@
 
 <footer>
     <ul>
-        <li>Term & services</li>
-        <li> so more text</li>
+        <li><a href="#">Terms & Services</a></li>
+        <li><a href="#">Privecy Policy</a></li>
+        <li><a href="#">Login Policy</a></li>
+        <li><a href="#">About</a></li>
     </ul>
 
 </footer>
