--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </header>
 
-<section class="group">
+<section class="clearfix">
 
     <div class="info-text">
         Cool Text here<br/>
@@ -25,7 +25,7 @@
         <form>
             <input type="text" placeholder="Email/ CollegeID"> <br/>
             <input type="password" placeholder="Password"> <br/>
-            <input type="submit" value="Login"><br/>
+            <input type="submit" class="btn blue full" value="Login"><br/>
             <label><input type="checkbox">Remember me</label>
             <a class="right group" href="#">Forgot Password?</a>
         </form>
