--- a/step2.html
+++ b/step2.html
@@ -18,9 +18,17 @@
 <section>
 
     <div class="box-model">
-        <h1>Enter New Password</h1>
-        <input type="password" placeholder="New Password"/>
-        <input type="password" placeholder="Confirm Password"/>
+        <h1>Basic information</h1>
+        <input type="text" placeholder="Email Address"/>
+        <input type="text" placeholder="Phone Number"/>
+        <label>
+            <select type="list">
+                <option>Select Branch</option>
+                <option>IT</option>
+                <option>CS</option>
+                <option>ME</option>
+            </select>
+        </label>
         <div class="btn-wrapper">
             <input type="submit" class="btn default small" value="Skip "/>
             <input type="submit" class="btn blue small" value="Next"/>
