--- a/step3.html
+++ b/step3.html
@@ -17,10 +17,20 @@
 </header>
 <section>
 
-    <div class="box-model">
-        <h1>Enter New Password</h1>
-        <input type="password" placeholder="New Password"/>
-        <input type="password" placeholder="Confirm Password"/>
+    <div class="box-model more">
+        <h1>Profile Picture</h1>
+        <div class="wrraper-profile pic">
+            <div class="profile">
+                <img src="img/17037.jpg" alt="Profile Picture">
+            </div>
+        </div>
+        <div class="wrraper-profile upload">
+            <label class="fileContainer">
+                Upload a photo
+                <input type="file"/>
+            </label>
+        </div>
+
         <div class="btn-wrapper">
             <input type="submit" class="btn default small" value="Skip "/>
             <input type="submit" class="btn blue small" value="Next"/>
